2022-03-09  Sihui Liu  <sihui_liu@apple.com>

        File System Access: disallows names that are not permitted by underlying file system
        https://bugs.webkit.org/show_bug.cgi?id=237635
        rdar://89291566

        We use FileSystem::fileSystemRepresentation to convert input name to a name that is permitted in current file 
        system. This patch makes File System Access API to throw error if the input name does not match the converted 
        name. 

        Reviewed by Youenn Fablet.

        * NetworkProcess/storage/FileSystemStorageHandle.cpp:
        (WebKit::isValidFileName):
        (WebKit::FileSystemStorageHandle::requestCreateHandle):
        (WebKit::FileSystemStorageHandle::removeEntry):
        (WebKit::FileSystemStorageHandle::move):

2022-03-09  Jon Lee  <jonlee@apple.com>

        Update feature flags for WebGL
        https://bugs.webkit.org/show_bug.cgi?id=237666
        rdar://problem/90040981

        Reviewed by Geoffrey Garen.

        * FeatureFlags/WebKit-appletvos.plist:
        * FeatureFlags/WebKit-ios.plist:
        * FeatureFlags/WebKit-watchos.plist:

2022-03-09  Simon Fraser  <simon.fraser@apple.com>

        Move RemoteLayerBackingStore::Buffer.isVolatile into ImageBufferBackend
        https://bugs.webkit.org/show_bug.cgi?id=237631

        Reviewed by Tim Horton.
        
        'isVolatile' is a property of a specific image buffer, so it makes more sense to have it in
        ImageBuffer[Backend] than RemoteLayerBackingStore. This also allows GPU Process code to
        maintain volatility state in the web process, which reduces the amount of IPC needed when
        making the front buffer non-volatile before display.

        So ImageBufferBackend gets volatilityState()/setVolatilityState(), accessed via ImageBuffer.
        This state is maintained by RemoteRenderingBackendProxy for remote buffers. We set the state
        to volatile when we receive the IPC reply for markSurfacesVolatile(), which requires