@@ -25,8 +25,6 @@ list(APPEND WebKit_SOURCES
 
     NetworkProcess/WebStorage/StorageManager.cpp
 
-    NetworkProcess/curl/NetworkProcessMainCurl.cpp
-
     Platform/IPC/win/AttachmentWin.cpp
     Platform/IPC/win/ConnectionWin.cpp
     Platform/IPC/win/IPCSemaphoreWin.cpp
@@ -36,8 +34,6 @@ list(APPEND WebKit_SOURCES
     Platform/win/LoggingWin.cpp
     Platform/win/ModuleWin.cpp
     Platform/win/SharedMemoryWin.cpp
-
-    Shared/API/c/curl/WKCertificateInfoCurl.cpp
 
     Shared/Plugins/Netscape/NetscapePluginModuleNone.cpp
 
@@ -58,9 +54,6 @@ list(APPEND WebKit_SOURCES
 
     UIProcess/API/C/WKViewportAttributes.cpp
 
-    UIProcess/API/C/curl/WKProtectionSpaceCurl.cpp
-    UIProcess/API/C/curl/WKWebsiteDataStoreRefCurl.cpp
-
     UIProcess/API/C/win/WKView.cpp
 
     UIProcess/CoordinatedGraphics/DrawingAreaProxyCoordinatedGraphics.cpp
@@ -69,8 +62,6 @@ list(APPEND WebKit_SOURCES
     UIProcess/Inspector/win/WebInspectorUIProxyWin.cpp
 
     UIProcess/Launcher/win/ProcessLauncherWin.cpp
-
-    UIProcess/WebsiteData/curl/WebsiteDataStoreCurl.cpp
 
     UIProcess/WebsiteData/win/WebsiteDataStoreWin.cpp
 
@@ -124,8 +115,6 @@ list(APPEND WebKit_INCLUDE_DIRECTORIES
     "${WEBKIT_DIR}/Shared/Plugins/win"
     "${WEBKIT_DIR}/Shared/wc"
     "${WEBKIT_DIR}/Shared/win"
-    "${WEBKIT_DIR}/UIProcess/API/C/cairo"
-    "${WEBKIT_DIR}/UIProcess/API/C/curl"
     "${WEBKIT_DIR}/UIProcess/API/C/win"
     "${WEBKIT_DIR}/UIProcess/API/cpp/win"
     "${WEBKIT_DIR}/UIProcess/API/win"
@@ -166,8 +155,6 @@ list(APPEND GPUProcess_SOURCES
 )
 
 if (${WTF_PLATFORM_WIN_CAIRO})
-    add_definitions(-DUSE_CAIRO=1 -DUSE_CURL=1)
-
     list(APPEND WebKit_SOURCES
         NetworkProcess/Cookies/curl/WebCookieManagerCurl.cpp
 
@@ -176,15 +163,23 @@ if (${WTF_PLATFORM_WIN_CAIRO})
 
         NetworkProcess/curl/NetworkDataTaskCurl.cpp
         NetworkProcess/curl/NetworkProcessCurl.cpp
+        NetworkProcess/curl/NetworkProcessMainCurl.cpp
         NetworkProcess/curl/NetworkSessionCurl.cpp
 
         Shared/API/c/cairo/WKImageCairo.cpp
+
+        Shared/API/c/curl/WKCertificateInfoCurl.cpp
 
         Shared/cairo/ShareableBitmapCairo.cpp
 
         Shared/curl/WebCoreArgumentCodersCurl.cpp
 
+        UIProcess/API/C/curl/WKProtectionSpaceCurl.cpp
+        UIProcess/API/C/curl/WKWebsiteDataStoreRefCurl.cpp
+
         UIProcess/Automation/cairo/WebAutomationSessionCairo.cpp
+
+        UIProcess/WebsiteData/curl/WebsiteDataStoreCurl.cpp
 
         UIProcess/cairo/BackingStoreCairo.cpp
 
@@ -193,6 +188,8 @@ if (${WTF_PLATFORM_WIN_CAIRO})
 
     list(APPEND WebKit_INCLUDE_DIRECTORIES
         "${WEBKIT_DIR}/NetworkProcess/curl"
+        "${WEBKIT_DIR}/UIProcess/API/C/cairo"
+        "${WEBKIT_DIR}/UIProcess/API/C/curl"
         "${WEBKIT_DIR}/WebProcess/WebCoreSupport/curl"
     )
 
